--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,14 @@
     <string name="_4_5">4.5</string>
     <string name="other_short_breif">Other Short breif</string>
     <string name="textview">TextView</string>
+    <string name="travellers">Travellers</string>
+
+    <string name="_1">1</string>
+    <string name="select_date">Select Date</string>
+    <string name="request_stay">Request Stay</string>
+    <string name="name">Name</string>
+    <string name="show_email_com">show@email.com</string>
+
 
 
 </resources>
