ReviewFragment Updated Created: Review Fragmment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="show_password">Show Password</string>
     <string name="password_should_be_atleast_of_6_characters">*Password should be atleast of 6 characters</string>
-    <string name="re_type_password">Re-type password:</string>
-    <string name="username">Username:</string>
+    <string name="re_type_password">Re-type Pass</string>
+    <string name="username">Username</string>
     <string name="Register">REGISTER</string>
-    <string name="e_mail">E-mail:</string>
+    <string name="e_mail">E-mail</string>
     <string name="traveller">Traveller</string>
-    <string name="password">Password:</string>
+    <string name="password">Password</string>
     <string name="guide">Guide</string>
     <string name="already_a_user_login">Already a user? Login</string>
     <string name="title_activity_local_translation_fragment">LocalTranslationFragment</string>
